--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
             <version>2.4.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
