--- a/src/main/resources/db/Liquibase/1.0/2021-13-10-creat-tables.yaml
+++ b/src/main/resources/db/Liquibase/1.0/2021-13-10-creat-tables.yaml
@@ -204,12 +204,12 @@ databaseChangeLog:
             type: TIMESTAMP WITHOUT TIME ZONE
         - column:
             constraints:
-              nullable: false
+              nullable: true
             name: address_id
             type: INTEGER
         - column:
             constraints:
-              nullable: false
+              nullable: true
             name: personal_info_id
             type: INTEGER
         tableName: users
