--- a/src/main/resources/db/Liquibase/1.0/2021-13-10-creat-tables.yaml
+++ b/src/main/resources/db/Liquibase/1.0/2021-13-10-creat-tables.yaml
@@ -779,7 +779,7 @@ databaseChangeLog:
         constraintName: messages_chat_id_fkey
         deferrable: false
         initiallyDeferred: false
-        onDelete: NO ACTION
+        onDelete: CASCADE
         onUpdate: NO ACTION
         referencedColumnNames: id
         referencedTableName: chats
