--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/private_advertisements
 spring.datasource.username=user
-spring.datasource.password=user
+spring.datasource.password=password
 
 # ===============================
 # JPA / HIBERNATE
@@ -21,4 +21,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 interval-in-cron-ad-date-off=0 0 0 * * *
+
+jwt.secret=butterfly
 
